--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,13 +9,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "@prisma/client": "^5.18.0",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.19.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2"
+  },
   "devDependencies": {
     "nodemon": "^3.1.4",
-    "prisma": "^5.17.0"
+    "prisma": "^5.18.0"
   },
-  "dependencies": {
-    "@prisma/client": "^5.17.0",
-    "express": "^4.19.2"
-  }
+  "description": ""
 }
